# QtQuickSDL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  QSDL_global.h  qsdl.cpp  qsdl.h  qsdlcontext.cpp  qsdlcontext.h  qsdlrenderer.cpp  qsdlrenderer.h  qsdltexture.cpp  qsdltexture.h  qsdltexturemanager.cpp  qsdltexturemanager.h  sdlitem.cpp  sdlitem.h
tests/: CMakeLists.txt  Main.qml  tst.qrc  tst_tilemap.cpp  tst_tilemap.h  tst_triangle.cpp
